[package]
name = "wik"
version = "0.1.0"
authors = ["Mustafa Barodawala"]
edition = "2021"
description = "A Wikipedia browser in the terminal, for inquisitive the CLI power-user."

[dependencies]
crossterm = "0.28.1"
digest = "0.10.7"
dirs = "5.0.1"
htmd = "0.1.6"
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sha2 = "0.10.8"
substring = "1.4.5"
tui = "0.19.0"
webbrowser = "1.0.2"
dialoguer = "0.11.0"
